changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

plugins/cflogger/cflogger.c: Clean out some of the messy and broken SQL (didn't
  use indexes, was missing important constraints and so on) in cflogger. This
  includes introducing a new version of the SQL schema used. The database will
  be automatically upgraded at next run. Be aware of that older versions were
  missing a check for too new format, thus once you upgraded the format you
  should not run it with an older version of the server. Changes to the schema
  includes adding some indexes and similar.
Arvid Norlander 2009-01-22

plugins/cflogger/cflogger.c, plugins/cfnewspaper/cfnewspaper.c: Now handles
  random maps the way the source code comments claims it does.
plugins/cfnewspaper/cfnewspaper.c: Make info about kills from a specific region
  work.
Arvid Norlander 2009-01-22

common/object.c: Add missing newline to log message that is shown if
  MEMORY_DEBUG is defined.
Arvid Norlander 2009-01-21

common/arch.c: Fix memory leak in archetypes when discrete damage is used.
Arvid Norlander 2009-01-21

server/plugins.c: Remove forgotten debug output.
plugins/cflogger/cflogger.c, plugins/cfnewspaper/cfnewspaper.c: Add missing
  newline in log output.
plugins/cfnewspaper/cfnewspaper.c: Close the second sqlite database as well.
Arvid Norlander 2009-01-21

server/plugins.c, server/server.c: Run closePlugin() in the various plugins at
  server shutdown. Previously it was only run when the wiz command plugout was
  used. This change is needed to properly close the sqlite database handles in
  cflogger and cfnewspaper.